--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -26,12 +26,14 @@ modules:
         - micro
         - starship
   
-  - type: default-flatpaks
-    configurations:
+- type: default-flatpaks
+  configurations:
     - scope: system
       notify: false
       repo:
         title: Flathub (system)
-      # sem "install" por enquanto: só remote
+      install:
+        - com.brave.Browser
+        - app.zen_browser.zen
       
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
