--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -35,5 +35,9 @@ modules:
         install:
           - com.brave.Browser
           - app.zen_browser.zen
+
+          # Gaming core
+          - com.valvesoftware.Steam
+          - com.valvesoftware.Steam.Utility.steam-runtime-tools
       
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
