--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -38,6 +38,9 @@ modules:
 
           # Gaming core
           - com.valvesoftware.Steam
+
+          # Proton management
+          - com.vysp3r.ProtonPlus
  
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
       
