--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -41,6 +41,9 @@ modules:
 
           # Proton management
           - com.vysp3r.ProtonPlus
+
+          # Media
+          - org.videolan.VLC
  
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
       
