--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -44,6 +44,8 @@ modules:
 
           # Media
           - org.videolan.VLC
- 
+  
+          # Flatpak permissions
+          - com.github.tchx84.Flatseal
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
       
