--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -17,6 +17,10 @@ modules:
       - source: system
         destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
 
+  - type: containerfile
+    snippets:
+      - COPY --from=ghcr.io/ublue-os/brew:latest /system_files /
+
   - type: dnf
     repos:
       copr:
@@ -48,6 +52,9 @@ modules:
     system:
       enabled:
         - keyd.service
+        - brew-setup.service
+        - brew-update.timer
+        - brew-upgrade.timer
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
       
