--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -33,6 +33,7 @@ modules:
         - keyd
         - 1password
         - 1password-cli
+        - distrobox
   
   - type: default-flatpaks
     configurations:
@@ -47,6 +48,7 @@ modules:
           - com.vysp3r.ProtonPlus
           - org.videolan.VLC
           - com.github.tchx84.Flatseal
+          - io.github.DistroShelf.DistroShelf
 
   - type: systemd
     system:
