Fix DistroShelf Flatpak ID

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -50,7 +50,7 @@ modules:
           - com.vysp3r.ProtonPlus
           - org.videolan.VLC
           - com.github.tchx84.Flatseal
-          - io.github.DistroShelf.DistroShelf
+          - com.ranfdev.DistroShelf
 
   - type: systemd
     system:
