Add minimal audio tools

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -36,6 +36,8 @@ modules:
         - 1password-cli
         - distrobox
         - xpadneo
+        - pavucontrol
+        - qpwgraph
   
   - type: default-flatpaks
     configurations:
