--- a/files/system/etc/skel/.config/scroll/config
+++ b/files/system/etc/skel/.config/scroll/config
@@ -11,16 +11,16 @@
 ### Variables
 #
 # Logo key. Use Mod1 for Alt.
-set $mod Mod4
+set $mod Mod1
 # Home row direction keys, like vim
 set $left h
 set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term kitty
+set $term konsole
 # Your preferred application launcher
-set $menu wmenu-run
+set $menu dms ipc call spotlight toggle
 
 ### Output configuration
 #
@@ -128,7 +128,7 @@ animations {
     bindsym $mod+Ctrl+Backspace kill all
 
     # Start your launcher
-    bindsym $mod+r exec $menu
+    bindsym $mod+space exec $menu
     
     bindsym $mod+e exec $filemanager
 
