--- a/files/system/etc/scroll/scroll-dms.conf
+++ b/files/system/etc/scroll/scroll-dms.conf
@@ -16,6 +16,8 @@
 #
 # Logo key. Use Mod1 for Alt.
 set $mod Mod1
+# Secondary modifier (Super/Windows key).
+set $super Mod4
 # Home row direction keys, like vim
 set $left h
 set $down j
@@ -29,6 +31,7 @@ set $menu dms ipc call spotlight toggle
 ### Session startup
 #
 exec dms run --session
+exec wl-paste --watch cliphist store
 
 ### Output configuration
 #
@@ -137,6 +140,11 @@ animations {
 
     # Start your launcher
     bindsym $mod+space exec $menu
+
+    # DMS helpers
+    bindsym $mod+v exec dms ipc call clipboard toggle
+    bindsym $mod+m exec dms ipc call processlist focusOrToggle
+    bindsym $mod+comma exec dms ipc call settings focusOrToggle
     
     bindsym $mod+e exec $filemanager
 
@@ -174,12 +182,12 @@ animations {
     bindsym $mod+Ctrl+home move beginning
     bindsym $mod+Ctrl+end move end
     # nomode
-    bindsym $mod+Alt+$left move left nomode
-    bindsym $mod+Alt+$down move down nomode
-    bindsym $mod+Alt+$up move up nomode
-    bindsym $mod+Alt+$right move right nomode
-    bindsym $mod+Alt+home move beginning nomode
-    bindsym $mod+Alt+end move end nomode
+    bindsym $mod+$super+$left move left nomode
+    bindsym $mod+$super+$down move down nomode
+    bindsym $mod+$super+$up move up nomode
+    bindsym $mod+$super+$right move right nomode
+    bindsym $mod+$super+home move beginning nomode
+    bindsym $mod+$super+end move end nomode
 
     # Focus other monitors
     bindsym $mod+Shift+$left focus output left
@@ -285,7 +293,7 @@ bindsym $mod+Shift+backslash mode "wssplit"
     bindsym --no-repeat $mod+slash jump
     bindsym --no-repeat $mod+Shift+slash jump container
     bindsym --no-repeat $mod+Ctrl+slash jump workspaces
-    bindsym --no-repeat $mod+Alt+slash jump floating
+    bindsym --no-repeat $mod+$super+slash jump floating
 
     # Content
     bindsym $mod+comma scale_content incr -0.05
@@ -300,8 +308,8 @@ bindsym $mod+Shift+backslash mode "wssplit"
     # Make the current focus fullscreen
     bindsym $mod+f fullscreen
     bindsym $mod+Ctrl+f fullscreen layout
-    bindsym $mod+Alt+f fullscreen application
-    bindsym $mod+Ctrl+Alt+f fullscreen global
+    bindsym $mod+$super+f fullscreen application
+    bindsym $mod+Ctrl+$super+f fullscreen global
 
     # Toggle the current focus between tiling and floating mode
     bindsym $mod+y focus mode_toggle
@@ -322,7 +330,7 @@ bindsym $mod+Shift+backslash mode "wssplit"
     bindsym --no-repeat $mod+Ctrl+Insert selection reset
     bindsym --no-repeat $mod+Shift+Insert selection move
     bindsym --no-repeat $mod+Ctrl+Shift+Insert selection workspace
-    bindsym --no-repeat $mod+Alt+Insert selection to_trail
+    bindsym --no-repeat $mod+$super+Insert selection to_trail
 
     # Marks
     # bindsym $mod+m exec scroll-mark-toggle.sh
@@ -341,7 +349,7 @@ bindsym $mod+Shift+backslash mode "wssplit"
     # Show the next scratchpad window or hide the focused scratchpad window.
     # If there are multiple scratchpad windows, this command cycles through them.
     bindsym $mod+z scratchpad show
-    bindsym --no-repeat $mod+Alt+z scratchpad jump
+    bindsym --no-repeat $mod+$super+z scratchpad jump
 
     bindsym $mod+Ctrl+z workspace back_and_forth
 
@@ -349,12 +357,12 @@ bindsym $mod+Shift+backslash mode "wssplit"
 # Mode modifiers
 #
 mode "modifiers" {
-    bindsym $right set_mode after; mode default 
-    bindsym $left set_mode before; mode default 
+    bindsym Right set_mode after; mode default 
+    bindsym Left set_mode before; mode default 
     bindsym home set_mode beginning; mode default 
     bindsym end set_mode end; mode default 
-    bindsym $up set_mode focus; mode default 
-    bindsym $down set_mode nofocus; mode default 
+    bindsym Up set_mode focus; mode default 
+    bindsym Down set_mode nofocus; mode default 
     bindsym h set_mode center_horiz; mode default 
     bindsym Shift+h set_mode nocenter_horiz; mode default 
     bindsym v set_mode center_vert; mode default 
@@ -608,11 +616,11 @@ bindsym $mod+g mode "spaces"
 #
 # Utilities:
 #
-    # Special keys to adjust volume via PulseAudio
-    bindsym --locked XF86AudioMute exec pactl set-sink-mute \@DEFAULT_SINK@ toggle
-    bindsym --locked XF86AudioLowerVolume exec pactl set-sink-volume \@DEFAULT_SINK@ -5%
-    bindsym --locked XF86AudioRaiseVolume exec pactl set-sink-volume \@DEFAULT_SINK@ +5%
-    bindsym --locked XF86AudioMicMute exec pactl set-source-mute \@DEFAULT_SOURCE@ toggle
+    # Special keys to adjust volume via DMS
+    bindsym XF86AudioRaiseVolume exec dms ipc call audio increment 3
+    bindsym XF86AudioLowerVolume exec dms ipc call audio decrement 3
+    bindsym XF86AudioMute exec dms ipc call audio mute
+    bindsym XF86AudioMicMute exec pactl set-source-mute \@DEFAULT_SOURCE@ toggle
 
     # Special keys to control media via playerctl
     bindsym --locked XF86AudioPlay exec playerctl play-pause
@@ -621,9 +629,9 @@ bindsym $mod+g mode "spaces"
     bindsym --locked XF86AudioNext exec playerctl next
     bindsym --locked XF86AudioStop exec playerctl stop
 
-    # Special keys to adjust brightness via brightnessctl
-    bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
-    bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
+    # Special keys to adjust brightness via DMS
+    bindsym XF86MonBrightnessUp exec dms ipc call brightness increment 5
+    bindsym XF86MonBrightnessDown exec dms ipc call brightness decrement 5
 
     # Special key to take a screenshot with grim
     bindsym Print exec grim
@@ -648,6 +656,7 @@ bindgesture swipe:4:up scale_workspace overview
 #
 # Read `man 5 scroll-bar` for more information about this section.
 bar {
+    mode invisible
     position top
 
     # When the status_command prints a new line to stdout, scrollbar updates.
@@ -661,6 +670,5 @@ bar {
         scroller #2F343AFF #055E20FF #FFFFFFFF
     }
 }
-bar mode invisible
 #
 # include /etc/scroll/config.d/*
