Add Ghostty and update README

--- a/files/system/etc/skel/.config/scroll/config
+++ b/files/system/etc/skel/.config/scroll/config
@@ -20,7 +20,7 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term konsole
+set $term ghostty
 # Your preferred application launcher
 set $menu dms ipc call spotlight toggle
 
