--- a/recipes/cosmic.yml
+++ b/recipes/cosmic.yml
@@ -8,3 +8,7 @@ description: This is my personal OS image.
 # the base image to build on top of (FROM) and the version tag to use
 base-image: quay.io/fedora-ostree-desktops/cosmic-atomic
 image-version: 43
+
+# module configuration, executed in order
+# keep empty to match the base image exactly
+modules: []
