Remove cosmic recipe and checklist

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,8 @@ jobs:
       matrix:
         recipe:
           # !! Add your recipes here
-          - cosmic.yml
+          - kinoite.yml
+          - silverblue.yml
     steps:
       # the build is fully handled by the reusable github action
       - name: Build Custom Image
